--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,12 @@ body {
 	margin: 0;
 	margin-top: 2px;
 	font-size: 0.75em;
+	font-family: inherit;
 	text-shadow: 0px 0px 10px black;
 	cursor: pointer;
 	text-decoration: none;
+	background-color: inherit;
+	border: none;
 }
 
 .main-link:hover {
@@ -65,7 +68,7 @@ body {
 
 .modal .modal-background .modal-box {
 	background-color: #fff;
-	font-family: "Inter, sans-serif";
+	font-family: Inter, sans-serif;
 	margin: 32px;
 	position: relative;
 	overflow-y: auto;
