--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .main {
-	background-image: url("./background.svg");
+	background-image: url("/background.svg");
 	background-position: center;
 	background-size: cover;
 	min-height: 100vh;
